--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-rate-limit": "^7.5.0",
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
+        "moment-timezone": "^0.5.47",
         "pdfkit": "^0.16.0",
         "sqlite3": "^5.1.7"
     }
